feat: update JavaScript notes

--- a/docs/JavaScript/004-字典类型/001-概述.md
+++ b/docs/JavaScript/004-字典类型/001-概述.md
@@ -1,24 +1,6 @@
-在编程中，字典通常指的是一种数据结构，用于存储键值对
+字典类型通常指的是可以存储键值对的数据结构
 
-在JavaScript中，创建字典类型结构有三种方式
-
-1. Object 
-2. Set / WeakSet
-3. Map / WeakMap
-
-
-
-**字典的特性**
-
-1. **键值对存储**：
-   - 每个元素由一个键和一个值组成。
-   - 键必须是唯一的，通常是不可变的数据类型。
-
-2. **快速查找**：
-   - 通过键可以快速检索对应的值。
-
-3. **动态大小**：
-   - 可以动态添加和删除键值对。
+在JavaScript 中有两种主要的数据结构可以用来实现字典：对象（Object）和 Map/WeakMap。
 
 
 
