--- a/docs/JavaScript/vaults/包装类/vaults/001-概述.md
+++ b/docs/JavaScript/vaults/包装类/vaults/001-概述.md
@@ -1,22 +1,25 @@
-# 包装类
+# 概述
+
 
 [[TOC]]
 
+## 概述
 
+除了 `null` 和 `undefined`，其他基本数据类型（如 `string`、`number`、`boolean`、`symbol` 和 `bigint`）都有对应的包装类：`String`、`Number`、`Boolean`、`Symbol` 和 `BigInt`。
 
-## 直接调用 vs new 调用
-
-除了 `null` 和 `undefined`，其他基本数据类型（如 `string`、`number`、`boolean`、`symbol` 和 `bigint`）都有对应的包装类
-
-`Symbol` 和 `BigInt` 的包装类确实只能通过 `Object` 方法获取，且使用场景不多「 唯一应用场景 `Symbol.description` 」
+`Symbol` 和 `BigInt` 的包装类只能通过 `Object` 方法获取，无法通过`new`获取，且实际使用意义不到 「 只有`Symbol.description`这一个使用场景 」
 
 
 
-当你在基本数据类型上调用属性或方法时，JavaScript 引擎会自动创建一个临时的包装对象。这种临时对象在使用后立即销毁
+当在基本数据类型上调用属性或方法时，JavaScript 引擎会自动创建一个临时的包装对象。这种临时对象在使用后立即销毁，用户无需关心这个过程。某些现代浏览器，如果可以直接使用对应属性和方法，创建包装类的过程都会被省略。
 
-整个过程是透明的，用户无需关心这个过程。
-
-一些现代浏览器，可能可以直接获取基本数据类型对应属性和方法，此时转包装类的过程都会被省略，以提升解析速度。
+```js
+const s = 'Hello World';
+s.x = 123;
+// 这是新的包装类了，之前的包装类已经被消耗
+// 如果需要挂载属性或方法，需要挂载到包装类的原型对象上
+s.x // undefined
+```
 
 
 
@@ -35,25 +38,21 @@ Boolean(123) // true
 
 
 
-使用 `new` 调用（如 `new Number('123')`）会返回包装对象
+使用 `new` 调用（如 `new Number('123')`）会返回包装对象。
 
 ```js
-new Number(123) // Number { 123 }
-Number(123) // 123
-```
+Number('123') // 123
 
-```js
-Boolean(null) ? 'true' : 'false' // 'false'
-new Boolean(null) ? 'true' : 'false' // 'true'
+new Number('123') // Number {123}
 ```
 
 
 
-## 实例方法
+## 通用方法
 
-### Valueof
+### valueof
 
-`valueOf()`方法返回包装对象实例对应的原始类型的值。
+返回包装对象实例对应的原始类型的值。
 
 ```js
 new Number(123).valueOf()  // 123
@@ -65,25 +64,11 @@ new Boolean(true).valueOf() // true
 
 ### toString
 
-`toString()`方法返回对应的字符串形式。
+返回包装类对应的字符串形式。
 
 ```js
 new Number(123).toString() // "123"
 new String('abc').toString() // "abc"
 new Boolean(true).toString() // "true"
-```
-
-
-
-## 扩展属性
-
-不能在基本数据类型的包装对象上挂载属性，因为每次调用都会创建一个新的包装对象。
-
-如果需要挂载属性或方法，应该挂载到包装类的原型对象上。
-
-```js
-const  s = 'Hello World';
-s.x = 123;
-s.x // undefined => 这是新的包装类，所以x属性值为undefined
 ```
 
